--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
         <header>
             <img src="Imagem do WhatsApp de 2023-11-21 à(s) 12.02.27_4eccc9a5.jpg " alt="minha foto">
             <h1>@geoluz</h1>
-            <p>Formanda em Análise e Desenvolvimento de Sistemas e futura desenvolvedora FullStack.</p>
+            <p>Formanda em Análise e Desenvolvimento de Sistemas pela universidade UNINTER e futura desenvolvedora FullStack.</p>
         </header>
 
         </section class="botoes-links">
              <a href="#" target="_blank" class="link" >
                 <button class="degrade"> 
-                    <span>linkedin</span>
+                    <span>Linkedin</span>
                     <i class="bi bi-linkedin"></i>
                 </button>
              </a>
              
              <a href="https://www.instagram.com/geoluz/" target="_blank" class="link" >
                 <button class="degrade"> 
-                    <span>instagram</span>
+                    <span>Instagram</span>
                     <i class="bi bi-instagram"></i>
                 </button>
              </a>
@@ -36,6 +36,13 @@
                 <button class="degrade"> 
                     <span>Portfolio</span>
                     <i class="bi bi-code-slash"></i>
+                </button>
+             </a>
+
+             <a href="https://github.com/geovannaluz" target="_blank" class="link" >
+                <button class="degrade"> 
+                    <span>GitHub</span>
+                    <i class="bi bi-github"></i>
                 </button>
              </a>
 
