--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </header>
 
         </section class="botoes-links">
-             <a href="#" target="_blank" class="link" >
+             <a href="https://www.linkedin.com/in/geovanna-luz-b8306b2b3/" target="_blank" class="link" >
                 <button class="degrade"> 
                     <span>Linkedin</span>
                     <i class="bi bi-linkedin"></i>
